# ChangeLog for sys-libs/cracklib
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/ChangeLog,v 1.170 2012/08/04 09:46:14 ago Exp $

  04 Aug 2012; Agostino Sarubbo <ago@gentoo.org> cracklib-2.8.19.ebuild:
  Stable for amd64, wrt bug #427132

  24 Jul 2012; Jeroen Roovers <jer@gentoo.org> cracklib-2.8.19.ebuild:
  Stable for HPPA (bug #427132).

  24 Jul 2012; Anthony G. Basile <blueness@gentoo.org> cracklib-2.8.19.ebuild:
  Stable ppc64, bug #427132

  23 Jul 2012; Markus Meier <maekke@gentoo.org> cracklib-2.8.19.ebuild:
  arm stable, bug #427132

  22 Jul 2012; <nixnut@gentoo.org> cracklib-2.8.19.ebuild:
  ppc stable #427132

  21 Jul 2012; Jeff Horelick <jdhore@gentoo.org> cracklib-2.8.19.ebuild:
  marked x86 per bug 427132

  18 May 2012; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.19.ebuild:
  Make zlib optional.

*cracklib-2.8.19 (18 May 2012)

  18 May 2012; Mike Frysinger <vapier@gentoo.org> +cracklib-2.8.19.ebuild:
  Version bump.

  22 Feb 2012; Patrick Lauer <patrick@gentoo.org> cracklib-2.8.16.ebuild,
  cracklib-2.8.18-r1.ebuild, cracklib-2.8.18.ebuild:
  Restricting jython

  20 Feb 2012; Torsten Veller <tove@gentoo.org> cracklib-2.8.18-r1.ebuild:
  Fix broken header

  20 Feb 2012; Patrick Lauer <patrick@gentoo.org> cracklib-2.8.16.ebuild,
  cracklib-2.8.18-r1.ebuild, cracklib-2.8.18.ebuild:
  Restricting pypy

  16 Feb 2012; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.18-r1.ebuild,
  +files/cracklib-2.8.18-python-stat.patch:
  Pull in sys/stat.h in python code to fix build #403777 by Patrick Lauer.

*cracklib-2.8.18-r1 (20 Nov 2011)

  20 Nov 2011; Mike Frysinger <vapier@gentoo.org> +cracklib-2.8.18-r1.ebuild:
  Add USE=static-libs support #378291 by Agostino Sarubbo.

*cracklib-2.8.18 (29 Sep 2010)

  29 Sep 2010; Mike Frysinger <vapier@gentoo.org> +cracklib-2.8.18.ebuild:
  Version bump.

  28 Sep 2010; Mike Frysinger <vapier@gentoo.org> cracklib-2.8.16.ebuild,