@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX cracklib-2.8.16-no-nls.patch 743 SHA256 51b8188ed3a580712aba36817ba1b288108273dab4965901798c787e0fce00be SHA512 691fa76eee5ef232500ad03abbe5bb4220c335f628d5762fdd6f7964983b810663a46073599f2de28ec6e3595089d0d634154944ba3af4e1572847980f8adfc7 WHIRLPOOL abc252e84b4606eea92f48a48881033848ffd904f5bc3af76ad9ed9995053f29a1e3f8e5dc4db53737da0a765ea8a7a6ad073f1598fffe76bdfcb445efc9d4e3
 AUX cracklib-2.8.16-python.patch 303 SHA256 553eda1706718dec30e954222ffbabba6681a06308f52c2e8e2a81e78c1e6080 SHA512 9a71013787209c2e87b2e601b0d2fc7c797eab0472d07afe27d63e7ae4359d1564f812ea5471388f09e706067d09e5c54af9098741d04df5fba6f5d25b1f2b08 WHIRLPOOL 67bea21c3de213b54b9b9ff668943303f6b7164d0a2a75fc36663e2c720487e127579df0ea209161204c39330caa1c7cffc87ca2a253e5444df5a51b4daf9c56
@@ -10,17 +10,17 @@ DIST cracklib-2.8.19.tar.gz 611602 SHA256 7086b0ca23f875c9cd9ea2a993c262384b274d
 EBUILD cracklib-2.8.16.ebuild 2144 SHA256 44c66d27c402b21bb8073b70d7d33ffb8b83368516c9721cbb8e5cb95b0b79a1 SHA512 3d87c96b66a929dcf04036f8af8d094a64e16cee6e9e14433b504776f964ebaccfe8a53aaf025161fc9c34b6525381de2a3d067428d73668bc61daa13b3daebd WHIRLPOOL 43eb54a41a7067bc6ae746f1cc5e7e60312487d23930919cc0bb55c4bdb954bb8b7ce77a165606d6a2eb3bc4d0004fcc6f295676436f839be4af675e0ab12bc7
 EBUILD cracklib-2.8.18-r1.ebuild 2192 SHA256 8d579f9f0a9651b4d70162f422cb7e65d0041aa94515c48a9e4e199c502c0283 SHA512 640548c9d8f847a5cc2fba7beac29f19654648fe9433bf548cbf31e76f82a4be549efac06384ee293f398c69f886a08d03fcef1b1a7bd2c70e4f01f442b0f90b WHIRLPOOL 3e9261c2ead15e0cf75eec11b5e9043687810da16037bc139ec864c84003517fc02087c6e198f051976af8ee01c82cbbc8c3c5de801198b0e1ce51f760190519
 EBUILD cracklib-2.8.18.ebuild 2067 SHA256 b54871c715af6a5a52d588a3622203b2953b04baaa08fc5a5501f1eaf91a7828 SHA512 fe101a112f050b7f41b56ed5f9907918eeccb49a047b6d1218935e0d112bc2c9aa7249ff6c9f5b8d34f00a25c3b8eeea4789e2801b9cdfd5d7f450ad0ad248b7 WHIRLPOOL 2d2171e7c74bd441f3257b6eaffd1ef1764c12526a645bfbe9c781f523a259ec5cf8b2d7b2c7142c4f0e84d18dd6a7fab5268a2922ef2aea0cf6a58e97109264
-EBUILD cracklib-2.8.19.ebuild 2284 SHA256 1ce70fb1f4e5b07180a6a7dc227b76462b2799dfe402fad56c0f5eed062a7fbb SHA512 90000539ad2cdb7dcd0cf0d60e1288ea13f47a47c4e7c5c21f7e3ea93f4585572ddd102a0baaa21ff98a54d285ec990adb9b1a3068813331558c54a853fb2870 WHIRLPOOL e82307b1b456edf7e4f59b6b865ff0a0eca9421aacbb472a030d46696c15c0c01c36369863ffb0a45bb67c30e237d03f3df70a907a3b97050c6a2506030339ef
-MISC ChangeLog 21690 SHA256 531578a1a47d888c9f9a5febf95cc344ed08174288be970b2bcd7dca4fbdf165 SHA512 42e5a328ecede49d44866286fe40b4b5229ec227a1c00f499265c6741d13fc3061cddf293bb136bc3715351fbbe98874fb97da5603d9e3f08d0e2d533e7cf1f9 WHIRLPOOL b8906599a03e8ead5a820a001c3d28fb1aa8e03c80c6a7ed8202b7c216213b2573dcb86eca7c9721bed7418c85448582dbd726149b2bb17d2e72e23596dd8e30
+EBUILD cracklib-2.8.19.ebuild 2381 SHA256 09c92c5ce1ac16e9676e593880749c4db8aa101fb7ed19e7618f9194fb815a37 SHA512 780d8f2d3cdc0412782bb158274c9ea44aa55e7abdd92ee650e2fee326e41a99b51e90ac2197fec402e1ebcafdfbbe0fee6b48959d703595ca289082b3ebe3cc WHIRLPOOL 96d64bcaec94e358fc6d148629f60f1a56cadbacdfa19d074334a3480d3ca801d49a99b2c31b4d61fda5611b6e4dd54c9b81898b3c1e6c53a0646a8a84f88be7
+MISC ChangeLog 21796 SHA256 ac84d22a8e4f4ef579e8144f31d744792657035fc62ec0c2a40262d372d1f694 SHA512 8e06ee4cd96763266e1977a8b65c4b845044c32d9478307426acd4a5662c8ff1f54206d092543d38f05981c2603e59ff4daf544154eee92c488ebda8fe4bf846 WHIRLPOOL d3abc865e8775445149951d54cb0b3f0915df1b53f1773a9870d6e151236d4032dc1f5da9a18d62346827257d619d2f5eb84fee1a8c617d2899054b48a9b72ec
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCgAGBQJQHO9sAAoJEOTDgjZ80txdUKgIAKwcH+FBO2AIMAyPUzilIPJQ
-ME5azBkIZ+QCq02qWLxFZtLxWNWyq1YF/CASKLibfFiSM5FUJr9Tg/Sq1NZuucGy
-i5Nc3tHKIcM1J1QGshoSSc+8jsKAZSCSz+ew6HfO2AF4UcDOZsR7kDgSdg9Lx2kR
-Re7jCZt6PKF3QXDI11i8hYMaywbL3rzIfz2JJI4ZUtwIiePfwcrLke9kW47I02ZF
-JEe/mbLTrsyBxFTf7r+8zlMeFHb4NcDHUGYiFAClC6QSRw8bKzwb4ojoI39vA1Ti
-QWYNNQjo7D1SmJSq3/0smA3svYbMY5zRxcMEukqbAq6QaYxkGhuslefObf1Lb3M=
-=UtFk
+iQEcBAEBCAAGBQJQMVSuAAoJEOeBhlrCAAWGXDYIAILMFHlCnVEHfS3mbxL7p6YS
++WPyPwKz9cUDovAd0Mea9PVzsUhyCUsgWuj8I87ciZp7z3N2umMxxhBku+MlVZ9u
+VY+RuX/uZTGFh9rwcvTVi8ZnVljnFFhMhCHzEt7bW5B0WXSynRPHvr5bqgjStg+6
+RD95/11FJf9KqCUoqaqD8Ebr7rqa4amrmosUPSI5FIvhn1xtGWlEhqBca6AGFWcK
+s9nM1S1a6kEq3Fs3gM0vr0xWY742PaBFeR43TLLkuMQ57yPAF4ZfT5i+paPazyST
+LStnVgB1xPccINjnyYSweC6dDO5Ypve+EpwYU9vVbpa1iilacIzZZTaAV9wawAk=
+=DNU9
 -----END PGP SIGNATURE-----
