@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/cracklib-2.8.19.ebuild,v 1.8 2012/08/04 09:46:14 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/cracklib/cracklib-2.8.19.ebuild,v 1.9 2012/08/19 21:03:34 ottxor Exp $
 
 EAPI="3"
 PYTHON_DEPEND="python? 2"
@@ -16,7 +16,7 @@ SRC_URI="mirror://sourceforge/cracklib/${MY_P}.tar.gz"
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~alpha amd64 arm hppa ~ia64 ~m68k ~mips ppc ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd"
+KEYWORDS="~alpha amd64 arm hppa ~ia64 ~m68k ~mips ppc ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x86-macos ~m68k-mint"
 IUSE="nls python static-libs zlib"
 
 RDEPEND="zlib? ( sys-libs/zlib )"
@@ -90,7 +90,7 @@ src_install() {
 pkg_postinst() {
 	if [[ ${ROOT} == "/" ]] ; then
 		ebegin "Regenerating cracklib dictionary"
-		create-cracklib-dict /usr/share/dict/* > /dev/null
+		create-cracklib-dict "${EPREFIX}"/usr/share/dict/* > /dev/null
 		eend $?
 	fi
 
